--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Page Title</title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blockquote Example</title>
 </head>
 <body>
-    <h1>Source Code Management</h1>
-    
-        <p>Semester 4</p>
-      
- 
+    <h1>Quoting Someone</h1>
+    <blockquote>
+        <p>“The only way to do great work is to love what you do.”</p>
+        <footer>- Steve Jobs</footer>
+    </blockquote>
 </body>
 </html>
