--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockquote Example</title>
+    <title>Button Example</title>
 </head>
 <body>
-    <h1>Quoting Someone</h1>
-    <blockquote>
-        <p>“The only way to do great work is to love what you do.”</p>
-        <footer>- Steve Jobs</footer>
-    </blockquote>
+    <h1>Click the Button</h1>
+    <button onclick="alert('Hello!')">Click Me</button>
 </body>
 </html>
