--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Example</title>
+    <title>Dropdown Example</title>
 </head>
 <body>
-    <h1>Click the Button</h1>
-    <button onclick="alert('Hello!')">Click Me</button>
+    <h1>Select a Fruit</h1>
+    <select>
+        <option value="apple">Apple</option>
+        <option value="banana">Banana</option>
+        <option value="orange">Orange</option>
+        <option value="grape">Grape</option>
+    </select>
 </body>
 </html>
