--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Example</title>
+    <title>Styled Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Select a Fruit</h1>
-    <select>
-        <option value="apple">Apple</option>
-        <option value="banana">Banana</option>
-        <option value="orange">Orange</option>
-        <option value="grape">Grape</option>
-    </select>
+    <h1>Welcome</h1>
+    <p>This page has some styles applied.</p>
 </body>
 </html>
