--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Form Example</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>This page has some styles applied.</p>
+    <h1>Signup Form</h1>
+    <form action="/submit" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username"><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
