--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Example</title>
+    <title>Link Example</title>
 </head>
 <body>
-    <h1>Signup Form</h1>
-    <form action="/submit" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
-        <input type="submit" value="Submit">
-    </form>
+    <h1>My Link</h1>
+    <p>Visit <a href="https://example.com">Example</a> for more information.</p>
 </body>
 </html>
