--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Example</title>
+    <title>Iframe Example</title>
 </head>
 <body>
-    <h1>My Link</h1>
-    <p>Visit <a href="https://example.com">Example</a> for more information.</p>
+    <h1>Embedded Content</h1>
+    <iframe src="https://www.example.com" title="Example"></iframe>
 </body>
 </html>
