--- a/index.html
+++ b/index.html
@@ -3,31 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML5 Semantics</title>
+    <title>Table Example</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article>
-            <h2>Article Title</h2>
-            <p>This is a sample article.</p>
-        </article>
-        <aside>
-            <h2>Advertisement</h2>
-            <p>Buy our product now!</p>
-        </aside>
-    </main>
-    <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
-    </footer>
+    <h1>Student Grades</h1>
+    <table border="1">
+        <tr>
+            <th>Name</th>
+            <th>Math</th>
+            <th>Science</th>
+            <th>English</th>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>90</td>
+            <td>85</td>
+            <td>95</td>
+        </tr>
+        <tr>
+            <td>Alice</td>
+            <td>88</td>
+            <td>92</td>
+            <td>91</td>
+        </tr>
+    </table>
 </body>
 </html>
